--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,9 @@ a {
 
 
 
+
+
+
 .hero {
     background-image: url(../images/header.jpg);
     color: white;
@@ -74,6 +77,9 @@ a {
 .hero span {
     margin-left: 30px;
 }
+
+
+
 
 
 
@@ -104,7 +110,7 @@ a {
 
 
 
-
+/* Nav */
 
 
 nav {
@@ -128,6 +134,10 @@ nav ul {
 nav ul li {
     padding: 1em;
 } 
+
+
+
+
 
 
 /* Grid */
@@ -160,8 +170,13 @@ div.img2 {
 
 
 
+
+/* Back to top */
+
+
 #bottom {
     position: absolute;
+    
 }
 
 
@@ -169,8 +184,9 @@ div.img2 {
 
 #back {
      position: fixed;
-    margin: 20px;
+    margin: 20px 0 10px 25px;
     bottom: 0px;
+    font-size: 2em;
     
 }
 
@@ -227,6 +243,7 @@ div.img2 {
         border: none;
         box-shadow: none;
         top: 0;
+        margin-top: auto;
         margin-left: 0;
     width: 100%;
     text-align: center;
@@ -308,10 +325,6 @@ nav li a {
     #back {
         display: none;
     }
-    
-    div .img2 {
-        
-    }
 }
 
 
@@ -320,9 +333,46 @@ nav li a {
 @media only screen and (max-width:455px) {
     .hero span {
         font-size: .8em;
-        text-align: center;
+    }
+
+    .hero h1 {
+        font-size: 2.5em;
+    }
+
+    nav ul li {
+        padding: 0;
+        margin-left: 3em;
+        font-size: .8em;
+    }
+    
+    .separate h1 {
+        font-size: 2em;
+         margin-top: -20px;
+    margin-left: 30px;
+    }
+    
+    #long {
+        width: 200px;
+    }
+    
+    .achievements {
+        height: 170px;
+        padding-left: 0;
+    }
+    
+    .content {
+        padding-left: 0;
+        margin-left: 0;
+    }
+    
+    
+    .works {
+        width: 200px;
+        height: 200px;
+    }
+    
+    .link {
+        padding-top: 200px;
     }
 }
-
-
 
