--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400');
-@import url('https://fonts.googleapis.com/css?family=Euphoria+Script');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 
 
 body {
-    font-family: "Poppins", "Helvetica", sans-serif;
+    font-family: 'Roboto Condensed', 'Helvetica', sans-serif;
     font-size; 16px;
+    font-weight: 300;
     padding: 0;
     color: dimgray;
     margin: 0;
@@ -13,7 +13,7 @@ body {
 h1 {
     font-size: 3.5em;
     font-weight: 700;
-    font-family: "Euphoria Script", "Poppins", "Helvetica";
+    font-family: 'Roboto Condensed', 'Helvetica', sans-serif;
     padding-bottom: 0;
     margin-bottom: 0;
 }
@@ -55,9 +55,6 @@ a {
 
 
 
-
-
-
 .hero {
     background-image: url(../images/header.jpg);
     color: white;
@@ -65,7 +62,7 @@ a {
     font-size: 2.5em;
     padding: 2em;
     line-height: 1em;
-    font-family: "Euphoria Script", "Poppins", "Helvetica";
+    font-family: 'Roboto Condensed', 'Helvetica', sans-serif;
 }
 
 .hero h1 {
@@ -85,16 +82,17 @@ a {
 
 /* box */
 
-.content {
+ .content {
     max-width: 80%;
     float: right;
     margin: 60px 40px 80px 210px;
-    border:2px solid lightgray;
-        box-shadow: 10pt 10pt lightgray; 
+    border-top: 2px solid lightgray;
+    border-bottom: 2px solid lightgray;
+
 }
 
 .separate h1{
-    width: 200px;
+    width: 220px;
     margin-top: -40px;
     margin-left: 30px;
     background:white;
@@ -115,11 +113,11 @@ a {
 
 nav {
     max-width: 150px;
-    position: absolute;
+    position: fixed;
     margin-left: 2em; 
     top: 500px;
-    border: 2px solid lightgray;
-    box-shadow: 10pt 10pt lightgray; 
+    border-left: 2px solid lightgray;
+
 }
 
 
@@ -135,8 +133,10 @@ nav ul li {
 } 
 
 
-
-
+.menu:hover {
+    color: darkgray;
+    font-weight: 400;
+}
 
 
 /* Grid */
@@ -176,25 +176,6 @@ img.works {
 }
 
 
-/* Back to top */
-
-
-#bottom {
-    position: absolute;
-    
-}
-
-
-
-
-#back {
-     position: fixed;
-    margin: 20px 0 10px 25px;
-    bottom: 0px;
-    font-size: 2em;
-    
-}
-
 
 
 /* Work Expanded */
@@ -219,39 +200,8 @@ iframe {
 
 /* Media Queries */
 
-@media only screen and (max-width:1700px) {
-    #winterescapefull {
-        max-height: 500px;
-    }
-}
-    
-@media only screen and (max-width:1300px) {
-    #winterescapefull {
-        max-height: 400px;
-        padding-left: 1em;
-    }
-    
-    nav {
-        left: 0;
-        margin: .5em;
-    }
-    
-    nav ul li {
-        padding: .5em, 0;
-        
-    }
-    
-}   
 
-    @media only screen and (max-width:1000px) {
-    #winterescapefull {
-        max-height: 300px;
-    }
-}    
-    
-
-
-@media only screen and (max-width:800px) {
+@media only screen and (max-width:940px) {
 
     
     nav {
@@ -262,7 +212,7 @@ iframe {
         margin-left: 0;
     width: 100%;
     text-align: center;
-        max-width: 800px;
+        max-width: 940px;
         max-height: 100px;
                 background-color: white;
 }
